# m_C

./: .gitignore  README.md
Cstring/: _str_reverse.c  debug_info.txt  diff_memcpy_and_strncpy.c  fopen.c  fread_fopen.c  memcpy.c  sprintf.c  sprintf_snprintf_usage.c  strstr.c
Cstring/memcpy/1_demo/: CMakeLists.txt
Cstring/memcpy/1_demo/include/: my_memcpy.h  my_print.h
Cstring/memcpy/1_demo/src/: main.c  my_memcpy.c  my_print.c
Cstring/memcpy/4_c_lib_implement/c_lib/: CMakeLists.txt
Cstring/memcpy/4_c_lib_implement/c_lib/include/: clib.h  clib_imp.h  err_type.h
Cstring/memcpy/4_c_lib_implement/c_lib/src/: clib.c  clib_imp.c
Cstring/memmove/: test_memmove.c
Cstring/parse_url/: parse_url.c
Cstring/read_fiile_in_str_buf/: CMakeLists.txt  main.c
Cstring/read_fiile_in_str_buf/include/: format_pairs_to_json.h  format_str_to_json.h  read_file.h  read_file_info_app.h
Cstring/read_fiile_in_str_buf/res/: info
Cstring/read_fiile_in_str_buf/src/: format_pairs_to_json.c  format_str_to_json.c  read_file.c  read_file_info_app.c
Cstring/reverse_string/: 1_str_reverse_op.c
Cstring/sizeof_char_array/: CMakeLists.txt
Cstring/sizeof_char_array/src/: char_Array_Test.c
Cstring/sprintf_snprintf_usage_demo/: 3_unuse_and_unable_use_process_time_history_file.c
Cstring/sscanf/: CMakeLists.txt  main.c
Cstring/sscanf/include/: sscanf_app.h
Cstring/sscanf/src/: sscanf_app.c
Cstring/strchr/: CMakeLists.txt  strchr_main.c
Cstring/strcpy/: strcpy.c
Cstring/string_escape/: 1_fmt_escape_string.c
Cstring/strstr/: CMakeLists.txt  main.c
Cstring/strtok/: CMakeLists.txt  main.c
Cstring/strtok/include/: strtok_app.h
Cstring/strtok/src/: strtok_app.c
Cstring/vsnprintf/: main.c  (+1 more)
IMG_Handle/02_rgb/02_rgb_to_jpg/: CMakeLists.txt
IMG_Handle/02_rgb/02_rgb_to_jpg/include/: rgb_to_jpg.h
IMG_Handle/02_rgb/02_rgb_to_jpg/libjpeg/: CMakeLists.txt  libjpeg.c
IMG_Handle/02_rgb/02_rgb_to_jpg/src/: main.c  rgb_to_jpg.c
IMG_Handle/02_rgb/03_jpg_to_rgb/: CMakeLists.txt
IMG_Handle/02_rgb/03_jpg_to_rgb/include/: img_utils.h
IMG_Handle/02_rgb/03_jpg_to_rgb/libjpeg/: libjpeg.h
IMG_Handle/02_rgb/03_jpg_to_rgb/src/: img_utils.c  main.c
basic/: xor.c
basic/callback/02_异步回调函数/: CMakeLists.txt
basic/callback/02_异步回调函数/src/: asynA.c  asynB.c
data_struct/1_fifo/2_demo/: CMakeLists.txt  main.c  ring_buffer.c  ring_buffer.h
data_struct/2_list/4_dp_list/: .gitignore  4k_mem_file  CMakeLists.txt  README.md  main.c  start_app.sh
data_struct/2_list/4_dp_list/inc/: db_list_api.h  tmp_passwd_list_db.h
data_struct/2_list/4_dp_list/src/: 01_dp_link_list.c  db.c  db_list_api.c
data_struct/2_list/4_dp_list/utils/: db_conf.h
file_op/: 3_fread_usage.c  5_fread_fopen.c  6_fseek_ftell.c  7_read_proc_exe_path.c  fseek_ftell.c  fseek_ftell_test_file.txt
file_op/2_fp_ret_strlen/: CMakeLists.txt
file_op/2_fp_ret_strlen/include/: fp_app.h
file_op/2_fp_ret_strlen/res/: conf.ini
file_op/2_fp_ret_strlen/src/: fp_app.c  main.c
http_project/: CMakeLists.txt  main.c
libc_api/: struct_timeval_usage.c
libc_api/timeval/: CMakeLists.txt
libc_api/timeval/src/: struct_timeval_usage.c
memory_manage/02_4k_mem_db/: 4k_mem_file  CMakeLists.txt  main.c  start_app.sh
memory_manage/02_4k_mem_db/inc/: db.h
memory_manage/02_4k_mem_db/src/: db.c
memory_manage/03_struct_mem_db/: CMakeLists.txt  README.md  main.c  start_app.sh
multi_process/1_demo_execl/: CMakeLists.txt  main.c
multi_process/1_demo_execl/include/: execl.h
multi_process/1_demo_execl/src/: execl.c  execl_cmd_type.c
other/18_qrcode/: CMakeLists.txt  main.c
other/18_qrcode/include/: qrcode.h
other/18_qrcode/src/: qrcode.c
other/19_cmake_op_lib/02_use_lib/: CMakeLists.txt  main.c
other/19_cmake_op_lib/02_use_lib/include/: gen_lib.h
other/21_include_third_party_template/: CMakeLists.txt  main.c
other/21_include_third_party_template/inc/: use_header.h
other/21_include_third_party_template/src/: use_header.c  usr_api.c
other/23_flash_rw_protect/: 4_src_with_data_4k_mem_file  CMakeLists.txt  README.md  clean_app.sh  main.c  src_4k_mem_file
other/23_flash_rw_protect/inc/: flash_rw_usr_api.h  flash_rw_usr_info.h
other/23_flash_rw_protect/src/: flash_rw_usr_api.c  flash_rw_usr_info.c  usr_api.c
other/25_fsm_demo/: CMakeLists.txt  clean.bat  main.c
other/25_fsm_demo/inc/: fsm_base.h
other/25_fsm_demo/src/: fsm_base.c
other/26_send_recv_ack_demo/: CMakeLists.txt  README.md  main.c
other/26_send_recv_ack_demo/inc/: common.h  fragment_recv.h  fragment_send.h  message_queue.h
other/26_send_recv_ack_demo/src/: common.c  fragment_recv.c  fragment_send.c  message_queue.c  template_demo_imp.c
other/30_gen_hex_arr/: CMakeLists.txt  main.c  start_app.sh
other/30_gen_hex_arr/inc/: gen_hex_data_arr.h
other/30_gen_hex_arr/src/: gen_hex_data_arr.c
other/7_log/: CMakeLists.txt
other/7_log/include/: com_log.h  com_utils.h
other/7_log/src/: com_log.c  com_utils.c  main.c
other/8_thread_pool_demo/: CMakeLists.txt  main.c
other/8_thread_pool_demo/demo/: CMakeLists.txt
other/8_thread_pool_demo/demo/include/: demo.h
other/8_thread_pool_demo/demo/src/: demo.c
other/8_thread_pool_demo/threadpool/: CMakeLists.txt
other/8_thread_pool_demo/threadpool/include/: threadpool.h
other/8_thread_pool_demo/threadpool/src/: threadpool.c
other/9_cli_cmd/test/: CMakeLists.txt  main.c
other/9_cli_cmd/test/include/: test.h
other/9_cli_cmd/test/src/: test.c
protocols/http/utils/http/: CMakeLists.txt
protocols/http/utils/http/include/: http.h  http_req.h  parse_url.h
protocols/http/utils/http/src/: cal_sha256.c  host_to_ip.c  http.c  http_get.c
test/3_inc_other_project/: CMakeLists.txt  clean_app.sh  main.c  start_app.sh
test/3_inc_other_project/inc/: usr_api.h
test/3_inc_other_project/src/: usr_api.c
test/3_inc_other_project/utils/include/: file_api.h
test/3_inc_other_project/utils/src/: file_api.c
tmpTest/: arr_del_question.c  char_def_and_use.c  find_dup.c  gen_combie_num.c  get_combine_num.c  get_time_op.c  gpio_usage.c  long_pree_test.c  returnCharPointerFunc.c  uint8_output.c
(+392 files in other folders)
